--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "hkqr-fps": "file:../hkqr-fps",
     "lucide-react": "^0.548.0",
     "next": "16.0.0",
+    "next-intl": "^4.4.0",
     "qrcode.react": "^4.2.0",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "react-phone-number-input": "^3.4.13"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
